[tool.poetry]
name = "voltz-v2-risk-engine"
version = "0.0.1"
description = "A python implementation of, and risk engine for, the new Voltz MarginEngine"
authors = ["Voltz <dev@voltz.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.0"

[tool.poetry.dev-dependencies]
black = "^22.12"
coverage = { extras = ["toml"], version = "^6.5" }
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
isort = "^5.11.4"
mypy = ">=0.990"
pre-commit = "^3.0.2"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
    "tests"
]
norecursedirs = "tests/helpers"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true